bad-sample/src/main/java/com/andrewreitz/bad/sample/TestInterface.java
package com.andrewreitz.bad.sample;

import com.andrewreitz.bad.Bad;

@Bad
public interface TestInterface {
}
